@@ -305,7 +305,7 @@ class CUserGroup extends CApiService {
 			self::exception(ZBX_API_ERROR_PERMISSIONS, _('Only Super Admins can delete user groups.'));
 		}
 
-		$usrgrpids = zbx_toArray($data['usrgrpids']);
+		$usrgrpids = array_keys(array_flip(zbx_toArray($data['usrgrpids'])));
 		$userids = (isset($data['userids']) && !is_null($data['userids'])) ? zbx_toArray($data['userids']) : null;
 		$rights = (isset($data['rights']) && !is_null($data['rights'])) ? zbx_toArray($data['rights']) : null;
 
@@ -352,8 +352,8 @@ class CUserGroup extends CApiService {
 			$linkedRights = array();
 			$sql = 'SELECT groupid,id'.
 				' FROM rights'.
-				' WHERE '.dbConditionInt('groupid', $usrgrpids);
-			' AND '.dbConditionInt('id', zbx_objectValues($rights, 'id'));
+				' WHERE '.dbConditionInt('groupid', $usrgrpids).
+					' AND '.dbConditionInt('id', zbx_objectValues($rights, 'id'));
 			$linkedRightsDb = DBselect($sql);
 			while ($link = DBfetch($linkedRightsDb)) {
 				if (!isset($linkedRights[$link['groupid']])) $linkedRights[$link['groupid']] = array();
@@ -363,7 +363,7 @@ class CUserGroup extends CApiService {
 			$rightInsert = array();
 			foreach ($usrgrpids as $usrgrpid) {
 				foreach ($rights as $right) {
-					if (!isset($linkedUsers[$usrgrpid][$right['id']])) {
+					if (!isset($linkedRights[$usrgrpid][$right['id']])) {
 						$rightInsert[] = array(
 							'groupid' => $usrgrpid,
 							'permission' => $right['permission'],
